--- a/original/environment.yml
+++ b/original/environment.yml
@@ -8,8 +8,8 @@ dependencies:
   - backcall=0.1.0=py38_0
   - blas=1.0=mkl
   - bleach=3.1.0=py_0
-  - ca-certificates=2020.1.1=0
-  - certifi=2019.11.28=py38_0
+  - ca-certificates=2021.10.26=h06a4308_2
+  - certifi=2021.10.8=py38h06a4308_2
   - cudatoolkit=10.1.243=h6bb024c_0
   - cycler=0.10.0=py38_0
   - dbus=1.13.12=h746ee38_0
@@ -67,7 +67,7 @@ dependencies:
   - numpy=1.18.1=py38h4f9e942_0
   - numpy-base=1.18.1=py38hde5b4d6_1
   - olefile=0.46=py_0
-  - openssl=1.1.1d=h7b6447c_4
+  - openssl=1.1.1m=h7f8727e_0
   - pandoc=2.2.3.2=0
   - pandocfilters=1.4.2=py38_1
   - parso=0.6.1=py_0
@@ -85,7 +85,7 @@ dependencies:
   - pyrsistent=0.15.7=py38h7b6447c_0
   - python=3.8.1=h0371630_1
   - python-dateutil=2.8.1=py_0
-  - pytorch=1.4.0=py3.8_cuda10.1.243_cudnn7.6.3_0
+  - pytorch=1.6.0=py3.8_cuda10.1.243_cudnn7.6.3_0
   - pyzmq=18.1.1=py38he6710b0_0
   - qt=5.9.7=h5867ecd_1
   - qtconsole=4.6.0=py_1
@@ -99,7 +99,7 @@ dependencies:
   - terminado=0.8.3=py38_0
   - testpath=0.4.4=py_0
   - tk=8.6.8=hbc83047_0
-  - torchvision=0.5.0=py38_cu101
+  - torchvision=0.7.0=py38_cu101
   - tornado=6.0.3=py38h7b6447c_3
   - traitlets=4.3.3=py38_0
   - wcwidth=0.1.8=py_0
@@ -111,4 +111,4 @@ dependencies:
   - zipp=2.2.0=py_0
   - zlib=1.2.11=h7b6447c_3
   - zstd=1.3.7=h0b5b093_0
-
+prefix: /home/lcur0497/.conda/envs/ats
