--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
-data
+data/
+logs/
+checkpoints/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -144,3 +146,6 @@ example_payload*
 schedule_index.json
 _temp.json
 _script.py
+
+# Pycharm
+.idea/
